--- a/vegam-interior-emulsion.html
+++ b/vegam-interior-emulsion.html
@@ -1127,45 +1127,34 @@
         }
       });
     </script>
-
-    <script>
+<script>
   const swatches = document.querySelectorAll(".product-swatch");
-  const heroSection = document.getElementById("productHero");
+  const hero = document.getElementById("productHero");
 
   swatches.forEach((swatch) => {
     swatch.addEventListener("click", function () {
       const selectedColor = window.getComputedStyle(this).backgroundColor;
 
       // Change hero background
-      heroSection.style.background = selectedColor;
-      heroSection.style.transition = "all 0.4s ease";
+      hero.style.background = selectedColor;
+      hero.style.transition = "all 0.4s ease";
 
-      // Convert RGB to brightness
+      // Get RGB values
       const rgb = selectedColor.match(/\d+/g);
       const brightness =
-        (parseInt(rgb[0]) * 299 +
-          parseInt(rgb[1]) * 587 +
-          parseInt(rgb[2]) * 114) /
-        1000;
+        (rgb[0] * 299 + rgb[1] * 587 + rgb[2] * 114) / 1000;
 
-      // If background is dark → text becomes white
-      if (brightness < 150) {
-        heroSection.style.color = "#ffffff";
+      const textColor = brightness < 150 ? "#ffffff" : "#1a1a1a";
 
-        heroSection.querySelectorAll(".ftag").forEach(tag => {
-          tag.style.borderColor = "#ffffff";
-          tag.style.color = "#ffffff";
-        });
+      // Change ALL text inside hero
+      hero.querySelectorAll("*").forEach((el) => {
+        el.style.color = textColor;
+      });
 
-      } else {
-        // If background is light → text becomes dark
-        heroSection.style.color = "#1a1a1a";
-
-        heroSection.querySelectorAll(".ftag").forEach(tag => {
-          tag.style.borderColor = "#1a1a1a";
-          tag.style.color = "#1a1a1a";
-        });
-      }
+      // Optional: adjust feature tag borders also
+      hero.querySelectorAll(".ftag").forEach((tag) => {
+        tag.style.borderColor = textColor;
+      });
     });
   });
 </script>
